<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mnysqtp.com.mnyproject.Fragment.AboutFragment">


    <TextView
        android:id="@+id/T1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="52dp"
        android:text="@string/ZZ" />

    <TextView
        android:id="@+id/T2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/T1"
        android:layout_alignBottom="@+id/T1"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/T1"
        android:layout_toRightOf="@+id/T1"
        android:text="@string/CMX"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/T3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/T1"
        android:layout_alignStart="@+id/T1"
        android:layout_below="@+id/T2"
        android:layout_marginTop="34dp"
        android:text="@string/LY" />

    <TextView
        android:id="@+id/T4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/T3"
        android:layout_alignLeft="@+id/T2"
        android:layout_alignStart="@+id/T2"
        android:text="@string/LHZ"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/T5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/T4"
        android:layout_toEndOf="@+id/T4"
        android:layout_toRightOf="@+id/T4"
        android:text="@string/text_NanY"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/T6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/T4"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/T5"
        android:layout_toRightOf="@+id/T5"
        android:text="@string/HHP"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/T5"
        android:layout_toEndOf="@+id/T6"
        android:layout_toRightOf="@+id/T6"
        android:text="@string/text_NvY"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/T7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/CLLY" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:layout_centerVertical="true"
        android:text="@string/XZ"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/T3"
        android:layout_alignStart="@+id/T3"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="14dp"
        android:text="@string/XZXX"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView19"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginBottom="40dp"
        android:text="@string/ABOUT"
        android:textAppearance="@style/BadgeText" />

</RelativeLayout>
